--- a/config/locales/zh-HK.yml
+++ b/config/locales/zh-HK.yml
@@ -45,8 +45,8 @@ zh-HK:
         calc_type: 分數計算方式
         full_match: 完全匹配（少選/多選一個選項全部扣分）
         part_match: 部分匹配（少選仍然可以得分，多選全部扣分）
-        random_questions: 題目亂序
-        random_options: 題目中的選項亂序 
+        shuffle_questions: 題目亂序
+        shuffle_options: 題目中的選項亂序 
         available: 公佈
         anonymous: 允許匿名參加
         result_viewable: 允許參加者查看結果
