--- a/config/locales/zh-HK.yml
+++ b/config/locales/zh-HK.yml
@@ -47,7 +47,7 @@ zh-HK:
         part_match: 部分匹配（少選仍然可以得分，多選全部扣分）
         shuffle_questions: 題目亂序
         shuffle_options: 題目中的選項亂序 
-        available: 公佈
+        published: 公佈
         anonymous: 允許匿名參加
         result_viewable: 允許參加者查看結果
         on_schedule: 按設定時間進行  
