be able to random questions from all

--- a/config/locales/zh-HK.yml
+++ b/config/locales/zh-HK.yml
@@ -56,6 +56,8 @@ zh-HK:
         on_schedule_hint: 開始時間之後才能按“開始”測驗
         start_at: 開始時間
         duration: 限時
+        random_questions: 隨機抽取題目
+        random_questions_num: 隨機抽取題目數量
         user: 創建者
         created_at: 創建時間
         updated_at: 更新時間
